tests/sumo/basic/person/errors/invalid_busstop/options.sumo
--net-file net2.net.xml --additional-files input_additional.add.xml 
